fix: Align margins between Apptments/Patients pages

--- a/frontend/src/pages/ProviderPages/PatientList/PatientList.css
+++ b/frontend/src/pages/ProviderPages/PatientList/PatientList.css
@@ -10,7 +10,7 @@
   max-width: 800px;
   align-items: flex-start;
   padding-bottom: 40px;
-  margin: 48px 154.5px;
+  margin: 2.5rem auto;
 }
 
 .all-patients-header {
