--- a/frontend/src/pages/ProviderPages/ProviderBookings/ProviderBookings.css
+++ b/frontend/src/pages/ProviderPages/ProviderBookings/ProviderBookings.css
@@ -4,7 +4,7 @@
   background: white;
   /* min-height: 100vh; */
   max-width: 800px;
-  margin: 3rem auto;
+  margin: 2.5rem auto;
 }
 
 .bookings-header-bar {
